--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li ><a href="#">ABOUT<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">SERVICES</a></li><li><a href="#">PORTFOLIO</a></li><li><a href="#">CONTACT</a></li>
+        <li ><a href="#">ABOUT<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">SERVICES</a></li><li><a href="#">PORTFOLIO</a></li><li><a href="#">CONTACT US</a></li>
         </ul>
         
     </div><!-- /.navbar-collapse -->
