--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul class="nav navbar-nav navbar-right">
         
         <li ><a href="#">ABOUT<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">SERVICES</a></li><li><a href="#">PORTFOLIO</a></li><li><a href="#">CONTACT US</a></li>
+        <li><a href="#">SERVICES</a></li><li><a href="#">PORTFOLIO</a></li><li><a href="#">CONTACT </a></li>
         </ul>
         
     </div><!-- /.navbar-collapse -->
